--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -1,6 +1,16 @@
-- uses: actions/checkout@v2
-- uses: darrenjennings/algolia-docsearch-action@master
-  with:
-    algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
-    algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
-    file: 'algolia-config.json'
+on:
+  pull_request:
+    types: [closed]
+
+name: Reindex Algolia Docsearch
+jobs:
+  reindex-docsearch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check
+        uses: actions/checkout@v2
+        uses: darrenjennings/algolia-docsearch-action@master
+        with:
+          algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
+          algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
+          file: 'algolia-config.json'
