--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -7,8 +7,8 @@ jobs:
   reindex-docsearch:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Check
-        uses: actions/checkout@v2
         uses: darrenjennings/algolia-docsearch-action@master
         with:
           algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
