--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -7,8 +7,11 @@ jobs:
   reindex-docsearch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Check
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        with:
+          path: main
+      - name: Reindex
         uses: darrenjennings/algolia-docsearch-action@master
         with:
           algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
