--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docsearch/js": "^3.0.0-alpha.41",
     "@docusaurus/core": "^2.0.0-beta.9",
     "@docusaurus/plugin-content-docs": "^2.0.0-beta.9",
     "@docusaurus/plugin-sitemap": "^2.0.0-beta.9",
