--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@docsearch/js": "^3.0.0-alpha.41",
     "@docusaurus/core": "^2.0.0-beta.9",
     "@docusaurus/plugin-content-docs": "^2.0.0-beta.9",
-    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.9",
+    "@docusaurus/plugin-google-gtag": "2.0.0-beta.9",
     "@docusaurus/plugin-sitemap": "^2.0.0-beta.9",
     "@docusaurus/preset-classic": "^2.0.0-beta.9",
     "@fontsource/inter": "^4.5.0",
