--- a/enterprise_configs/0.25/default.yaml
+++ b/enterprise_configs/0.25/default.yaml
@@ -1,4 +1,4 @@
-# This is a configuration reference file that contains source code from Astronomer's private Houston API repository.
+# This is a reference configuration file that contains source code from Astronomer's private Houston API repository.
 # It is maintained by Astronomer's documentation team and should be used as a reference to help you configure
 # the `astronomer.houston.config` section of your `config.yaml` file on Astronomer Enterprise.
 
